--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,5 @@
-@charset "UTF-8";
 /*fonts*/
 /*colors*/
-/*dégradés*/
 @font-face {
   font-family: "Montserrat700";
   src: url("../fonts/Montserrat-Bold.ttf") format("truetype");
@@ -37,6 +35,10 @@
 @font-face {
   font-family: "KaushanScript";
   src: url("../fonts/KaushanScript-Regular.ttf") format("truetype");
+}
+@font-face {
+  font-family: "Devonshire";
+  src: url("../fonts/Devonshire-Regular.ttf") format("truetype");
 }
 /* animation liens footer */
 @-webkit-keyframes vibrate-3 {
@@ -154,6 +156,27 @@
     opacity: 1;
   }
 }
+/* animation scale-up-center*/
+@-webkit-keyframes scale-up-center {
+  0% {
+    -webkit-transform: scale(0.5);
+    transform: scale(0.5);
+  }
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
+@keyframes scale-up-center {
+  0% {
+    -webkit-transform: scale(0.5);
+    transform: scale(0.5);
+  }
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
 header {
   width: 100%;
   height: 200px;
@@ -180,16 +203,30 @@ footer {
   position: fixed;
   bottom: 0;
 }
+@media screen and (max-width: 991px) {
+  footer {
+    height: 80px;
+  }
+}
+@media screen and (max-width: 699px) {
+  footer {
+    height: 50px;
+  }
+}
 footer a {
   color: #fcca53;
   text-decoration: none;
-  padding-left: 40px;
-  padding-right: 40px;
-  font-size: 1.9em;
+  padding-left: 150px;
+  padding-right: 150px;
+  font-size: 2.5em;
 }
 footer a:hover {
   -webkit-animation: vibrate-3 0.8s steps(2, end) infinite both;
   animation: vibrate-3 0.8s steps(2, end) infinite both;
+}
+
+.menu-1 {
+  text-align: center;
 }
 
 .mentions_legales {
@@ -244,80 +281,159 @@ main {
   margin-bottom: 150px;
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
 
-.accueil {
+.block {
   display: flex;
-  align-content: space-around;
-  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+.block a {
+  text-decoration: none;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.link {
+  text-align: center;
+}
+.link h2 {
+  padding-top: 200px;
+  color: #3d1319;
+  font-size: 2em;
+}
+.link p {
+  padding-top: 40px;
+  padding-bottom: 200px;
+  font-size: 3.5em;
 }
 
 .accueil-menu-1 {
-  width: 200px;
-  height: 300px;
-  padding-top: 30px;
+  width: 20%;
+  margin-left: 40px;
+  margin-right: 20px;
   background-color: #fcdfdb;
   box-shadow: 0px 0px 4px 5px #f1f1f1;
 }
-.accueil-menu-1 a {
-  width: 200px;
-  height: 300px;
-  text-align: center;
-  text-decoration: none;
+.accueil-menu-1 h2 {
+  font-size: 3em;
+  padding-top: 5px;
+  font-family: "Devonshire", cursive;
+}
+.accueil-menu-1 p {
+  padding-top: 30px;
+  font-family: "Caveat-Regular", serif;
+  color: #3d1319;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+.accueil-menu-1 .icone {
+  background: -webkit-linear-gradient(right, #f78f6a, #f04a5e);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  padding-top: 160px;
+  font-size: 3em;
+}
+.accueil-menu-1:hover {
+  transform: scale(1.1);
+  opacity: 0.5;
 }
 
 .accueil-menu-2 {
-  width: 200px;
-  height: 300px;
-  padding-top: 30px;
+  width: 20%;
+  margin-left: 20px;
+  margin-right: 20px;
   background-color: #fff5fe;
   box-shadow: 0px 0px 4px 5px #f1f1f1;
 }
-.accueil-menu-2 a {
-  text-align: center;
-  text-decoration: none;
+.accueil-menu-2 h2 {
+  font-family: "YesevaOne", serif;
+  background: -webkit-gradient(linear, left top, right bottom, from(#d8852e), to(#905bfd));
+  background: gradient(linear, left top, right bottom, from(#d8852e), to(#905bfd));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+}
+.accueil-menu-2 p {
+  color: #d8852e;
+  padding-top: 45px;
+  font-weight: bold;
+}
+.accueil-menu-2:hover {
+  transform: scale(1.1);
+  opacity: 0.5;
 }
 
 .accueil-menu-3 {
-  width: 200px;
-  height: 300px;
-  padding-top: 30px;
+  width: 20%;
+  margin-left: 20px;
+  margin-right: 20px;
   background-color: #f9f9f9;
   box-shadow: 0px 0px 4px 5px #f1f1f1;
 }
-.accueil-menu-3 a {
-  text-align: center;
-  text-decoration: none;
+.accueil-menu-3 h2 {
+  font-family: "Dancing Script", cursive;
+  background: -webkit-gradient(linear, left top, right bottom, from(#0229dd), to(#0887fb));
+  background: gradient(linear, left top, right bottom, from(#0229dd), to(#0887fb));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+}
+.accueil-menu-3 p {
+  font-family: "Caveat-Regular", serif;
+  color: #229df9;
+}
+.accueil-menu-3:hover {
+  transform: scale(1.1);
+  opacity: 0.5;
 }
 
 .accueil-menu-4 {
-  width: 200px;
-  height: 300px;
-  padding-top: 30px;
+  width: 20%;
+  margin-left: 20px;
+  margin-right: 40px;
   background-color: #fdfffd;
   box-shadow: 0px 0px 4px 5px #f1f1f1;
 }
-.accueil-menu-4 a {
-  text-align: center;
-  text-decoration: none;
+.accueil-menu-4 h2 {
+  font-family: "KaushanScript", cursive;
+  background: -webkit-gradient(linear, left top, right bottom, from(#42973c), to(#bfff7c));
+  background: gradient(linear, left top, right bottom, from(#42973c), to(#bfff7c));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+}
+.accueil-menu-4 p {
+  font-family: "Caveat-Regular", serif;
+  color: #72bf56;
+}
+.accueil-menu-4:hover {
+  transform: scale(1.1);
+  opacity: 0.5;
 }
 
 /*PROCHAINEMENT*/
 button {
-  height: 80px;
-  margin-top: 30px;
-  margin-bottom: 30px;
   margin: auto;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 330px;
-  height: 80px;
+  width: 600px;
+  height: 100px;
   border-radius: 10px;
   background-color: #579c85;
   color: #fcca53;
   font-family: "Montserrat400";
-  font-size: 1.9em;
+  font-size: 2.5em;
+}
+
+.prochainement {
+  margin-bottom: 50px;
+  margin-top: 20px;
 }
 
 .btn {
