--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,22 +17,165 @@ body {
     display: flex;
     flex-direction: column;
 }
+
+main {
+    margin-top: 50px;
+    margin-bottom: 150px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.block {
+    display: flex;
+    justify-content: space-evenly;
+    & a {
+        text-decoration: none;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+      }
+}
+.link {
+    text-align: center; 
+    & h2 {
+        padding-top: 200px;
+        color: $color-menu1-1;
+        font-size: 2em;
+    }
+    & p {
+        padding-top: 40px;
+        padding-bottom: 200px;
+        font-size: 3.5em;
+    }
+}
+
+.accueil-menu-1 {
+    width: 20%;
+    margin-left: 40px;
+    margin-right: 20px;
+    background-color: $color-menu1;
+    box-shadow: 0px 0px 4px 5px #f1f1f1;
+    & h2 {
+        font-size: 3em;
+        padding-top: 5px;
+        font-family: 'Devonshire', cursive;
+    }
+    & p {
+        padding-top: 30px;
+        font-family: $font-secondary;
+        color: $color-menu1-1;
+        text-transform: uppercase;
+        font-weight: bold;
+    }
+    & .icone {
+        background: -webkit-linear-gradient(right, $color-note-1, $color-note-2);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        padding-top: 160px;
+        font-size: 3em;
+    }
+    &:hover {
+        transform: scale(1.1);
+        opacity: 0.5;
+        }
+}
+
+
+.accueil-menu-2 {
+    width: 20%;
+    margin-left: 20px;
+    margin-right: 20px;
+    background-color: $color-menu2;
+    box-shadow: 0px 0px 4px 5px #f1f1f1;
+    & h2 {
+    font-family: $font-chic;
+    background: -webkit-gradient(linear, left top, right bottom, from($color-menu2-1), to($color-menu2-2));
+    background: gradient(linear, left top, right bottom, from($color-menu2-1), to($color-menu2-2));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    }
+    & p {
+    color: $color-menu2-1;
+    padding-top: 45px;
+    font-weight: bold;
+    }
+    &:hover {
+        transform: scale(1.1);
+        opacity: 0.5;
+        }
+}
+
+.accueil-menu-3 {
+    width: 20%;
+    margin-left: 20px;
+    margin-right: 20px;
+    background-color: $color-menu3;
+    box-shadow: 0px 0px 4px 5px #f1f1f1;
+    & h2 {
+    font-family: $font-delice;
+    background: -webkit-gradient(linear, left top, right bottom, from($color-menu3-2), to($color-menu3-1));
+    background: gradient(linear, left top, right bottom, from($color-menu3-2), to($color-menu3-1));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    }
+    & p {
+    font-family: $font-secondary;
+    color: $color-menu3-3;
+    }
+    &:hover {
+    transform: scale(1.1);
+    opacity: 0.5;
+    }
+}
+
+.accueil-menu-4 {
+    width: 20%;
+    margin-left: 20px;
+    margin-right: 40px;
+    background-color: $color-menu4;
+    box-shadow: 0px 0px 4px 5px #f1f1f1;
+    & h2 {
+    font-family: $font-palette;
+    background: -webkit-gradient(linear, left top, right bottom, from($color-menu4-1), to($color-menu4-2));
+    background: gradient(linear, left top, right bottom, from($color-menu4-1), to($color-menu4-2));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    }
+    & p {
+    font-family: $font-secondary;
+    color: $color-menu4-3;
+    }
+    &:hover {
+    transform: scale(1.1);
+    opacity: 0.5;
+    }
+}
+
 /*PROCHAINEMENT*/
 button {
-    height: 80px;
-    margin-top: 30px;
-    margin-bottom: 30px;    
     margin: auto;    
     display: flex;    
     justify-content: center;        
     align-items: center;
-    width: 330px;
-    height: 80px;
+    width: 600px;
+    height: 100px;
     border-radius: 10px;    
     background-color: $color-primary;         
     color: $color-secondary;  
     font-family: 'Montserrat400';;      
-    font-size: 1.9em; 
+    font-size: 2.5em;
+}
+
+.prochainement {
+    margin-bottom: 50px;
+    margin-top: 20px;
 }
 
 .btn {
@@ -52,69 +195,4 @@ button {
 .dot3 {
     -webkit-animation: blink-2 0.9s 1.2s infinite both;
     animation: blink-2 0.9s 1.2s infinite both;
-}
-
-main {
-    margin-top: 50px;
-    margin-bottom: 50px;
-    display: flex;
-    flex-direction: column;;
-}
-
-.accueil {
-    display: flex;
-    align-content: space-around;
-    flex-wrap: wrap;
-}
-
-.accueil-menu-1 {
-    width: 200px;
-    height: 300px;
-    padding-top: 30px;
-    background-color: $color-menu1;
-    box-shadow: 0px 0px 4px 5px #f1f1f1;
-    justify-content: space-between;
-    & a {
-        width: 200px;
-        height: 300px;
-        text-align: center;
-        text-decoration: none;
-        justify-content: space-between;
-    }
-}
-
-.accueil-menu-2 {
-    width: 200px;
-    height: 300px;
-    padding-top: 30px;
-    background-color: $color-menu2;
-    box-shadow: 0px 0px 4px 5px #f1f1f1;
-    & a {
-        text-align: center;
-        text-decoration: none;
-    }
-}
-
-.accueil-menu-3 {
-    width: 200px;
-    height: 300px;
-    padding-top: 30px;
-    background-color: $color-menu3;
-    box-shadow: 0px 0px 4px 5px #f1f1f1;
-    & a {
-        text-align: center;
-        text-decoration: none;
-    }
-}
-
-.accueil-menu-4 {
-    width: 200px;
-    height: 300px;
-    padding-top: 30px;
-    background-color: $color-menu4;
-    box-shadow: 0px 0px 4px 5px #f1f1f1;
-    & a {
-        text-align: center;
-        text-decoration: none;
-    }
 }
