--- a/sass/utils/variables.scss
+++ b/sass/utils/variables.scss
@@ -1,35 +1,30 @@
  /*fonts*/
 
 $font-maintitle:'Montserrat', sans-serif;
-$font-note:'Damion', cursive;
-$font-secondary:'Caveat', cursive;
-$font-chic:'Yeseva One', serif;
-$font-chic-2:'Cantata One', serif;
+$font-note:'Devonshire', cursive;
+$font-secondary:'Caveat-Regular', serif;
+$font-chic:'YesevaOne', serif;
+$font-chic-2:'CantataOne', serif;
 $font-delice:'Dancing Script', cursive;
-$font-palette:'Kaushan Script', cursive;
+$font-palette:'KaushanScript', cursive;
 
 /*colors*/
 
+$color-note-1: #f78f6a;
+$color-note-2: #f04a5e;
 $color-primary: #579c85;
 $color-secondary: #fcca53;
 $color-menu1: #fcdfdb;
 $color-menu1-1: #3d1319;
 $color-menu2: #fff5fe;
-$color-menu2-1: #c77412;
-$color-menu2-2: #a56799;
+$color-menu2-1: #d8852e;
+$color-menu2-2: #905bfd;
 $color-menu3: #f9f9f9;
 $color-menu3-1: #0887fb;
-$color-menu3-2: #0670f3;
+$color-menu3-2: #0229dd;
 $color-menu3-3: #229df9;
 $color-menu4: #fdfffd;
-$color-menu4-1: #45993e;
-$color-menu4-2: #beff7f;
-
-/*dégradés*/
-
-$degrad-rouge-orange: linear-gradient(#f05160 0%, #f6916a 100%);
-$degrad-orange-violet: linear-gradient($color-menu2-1 0%, $color-menu2-2 100%);
-$degrad-bleus: linear-gradient($color-menu3-2 0%, $color-menu3-3 100%);
-$degrad-vert1: linear-gradient($color-menu4-1 0%, $color-menu4-2 100%);
-$degrad-vert2: linear-gradient($color-menu4-2 0%, $color-menu4-1 100%);
+$color-menu4-1: #42973c;
+$color-menu4-2: #bfff7c;
+$color-menu4-3: #72bf56;
 
