Mise en page menu La note enchantee

--- a/css/style.css
+++ b/css/style.css
@@ -226,7 +226,50 @@ footer a:hover {
 }
 
 .menu-1 {
+  width: 1200px;
+  margin: auto;
+  height: auto;
+  display: flex;
+  background-color: #fcdfdb;
+  box-shadow: 0px 0px 4px 5px #f1f1f1;
+  margin-top: 50px;
+  margin-bottom: 150px;
+}
+.menu-1 .icone {
+  font-size: 3em;
+  padding-top: 80px;
+  padding-bottom: 30px;
+}
+.menu-1 h3 {
   text-align: center;
+  font-family: "Devonshire", cursive;
+  font-size: 3em;
+  padding-bottom: 50px;
+}
+.menu-1 h3:after {
+  text-decoration: underline;
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 0;
+  height: 2px;
+  background: #3d1319;
+  transition: width 500ms ease;
+}
+.menu-1 h3:hover:after {
+  width: 100%;
+}
+
+.section__menu--variation1 {
+  display: flex;
+  flex-direction: column;
+}
+
+.block_title {
+  display: inline-block;
+  justify-content: space-between;
+  width: 85%;
 }
 
 .mentions_legales {
