--- a/sass/layouts/footer.scss
+++ b/sass/layouts/footer.scss
@@ -1,6 +1,7 @@
 footer {
     width: 100%;
-    height: 200px;
+    height: 140px;
+    margin-top: 50px;
     background-color: $color-primary;
     font-family: 'Montserrat400';
     display: flex;
@@ -9,13 +10,19 @@ footer {
     position: fixed;
     position: fixed;
     bottom: 0;
+    @media screen and (max-width: 991px) {
+      height: 80px;
+    }
+    @media screen and (max-width: 699px) {
+      height: 50px;
+    }
 
     & a {
         color: $color-secondary;
         text-decoration: none;
-        padding-left: 40px;
-        padding-right: 40px;
-        font-size: 1.9em;
+        padding-left: 150px;
+        padding-right: 150px;
+        font-size: 2.5em;
     }
     a:hover {
       -webkit-animation: vibrate-3 0.8s steps(2, end) infinite both;
