--- a/sass/pages/la_note_enchantee.scss
+++ b/sass/pages/la_note_enchantee.scss
@@ -1,3 +1,48 @@
 .menu-1 {
-    text-align: center;
+    width: 1200px;
+    margin: auto;
+    height: auto;
+    display: flex;
+    background-color: $color-menu1;
+    box-shadow: 0px 0px 4px 5px #f1f1f1;
+    margin-top: 50px;
+    margin-bottom: 150px;
+    & .icone {
+        font-size: 3em;
+        padding-top: 80px;
+        padding-bottom: 30px;
+    }
+    & h3 {
+        text-align: center;
+        font-family: $font-note;
+        font-size: 3em;
+        padding-bottom: 50px;
+    }
+
+h3:after {
+        text-decoration: underline;
+        content: '';
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        width: 0;
+        height: 2px;
+        background: $color-menu1-1;
+        transition: width 500ms ease;
+      }
+       
+    h3:hover:after {
+        width: 100%;
+      }
+}
+
+.section__menu--variation1 {
+    display: flex;
+    flex-direction: column;
+}
+
+.block_title {
+    display: inline-block;
+    justify-content: space-between;
+    width: 85%;
 }
