Mise en page des pages menus

--- a/sass/base/typo.scss
+++ b/sass/base/typo.scss
@@ -42,3 +42,8 @@
     font-family: 'KaushanScript';
     src: url('../fonts/KaushanScript-Regular.ttf') format('truetype');
 }
+
+@font-face {
+    font-family: 'Devonshire';
+    src: url('../fonts/Devonshire-Regular.ttf') format('truetype');
+}
