--- a/sass/utils/variables.scss
+++ b/sass/utils/variables.scss
@@ -19,6 +19,7 @@ $color-menu1-1: #3d1319;
 $color-menu2: #fff5fe;
 $color-menu2-1: #d8852e;
 $color-menu2-2: #905bfd;
+$color-menu2-3: #a56799;
 $color-menu3: #f9f9f9;
 $color-menu3-1: #0887fb;
 $color-menu3-2: #0229dd;
