--- a/css/style.css
+++ b/css/style.css
@@ -225,51 +225,685 @@ footer a:hover {
   animation: vibrate-3 0.8s steps(2, end) infinite both;
 }
 
+header a {
+  text-decoration: none;
+}
+header a:visited {
+  color: #fcca53;
+}
+
 .menu-1 {
   width: 1200px;
   margin: auto;
-  height: auto;
   display: flex;
   background-color: #fcdfdb;
   box-shadow: 0px 0px 4px 5px #f1f1f1;
   margin-top: 50px;
   margin-bottom: 150px;
+  font-family: "Caveat-Regular", serif;
+  font-size: 1.5em;
+  font-weight: lighter;
 }
-.menu-1 .icone {
-  font-size: 3em;
-  padding-top: 80px;
-  padding-bottom: 30px;
-}
-.menu-1 h3 {
-  text-align: center;
-  font-family: "Devonshire", cursive;
-  font-size: 3em;
+
+.block__title-1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 50px;
   padding-bottom: 50px;
 }
-.menu-1 h3:after {
-  text-decoration: underline;
+.block__title-1 h4 {
+  padding-left: 120px;
+  padding-right: 120px;
+  font-size: 2em;
+  color: #3d1319;
+  position: relative;
+}
+.block__title-1 h4 img {
+  max-height: 20px;
+}
+.block__title-1 h4:before {
   content: "";
   position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 0;
-  height: 2px;
-  background: #3d1319;
-  transition: width 500ms ease;
-}
-.menu-1 h3:hover:after {
   width: 100%;
+  height: 3px;
+  bottom: 0;
+  left: 0;
+  background-color: #3d1319;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: all 600ms ease-in-out;
+}
+.block__title-1 h4:hover:before {
+  visibility: visible;
+  transform: scaleX(1);
 }
 
-.section__menu--variation1 {
+.block__title-2 {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+.block__title-2 h4 {
+  padding-left: 80px;
+  padding-right: 80px;
+  font-size: 2em;
+  color: #3d1319;
+  position: relative;
+}
+.block__title-2 h4 img {
+  max-height: 20px;
+}
+.block__title-2 h4:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  bottom: 0;
+  left: 0;
+  background-color: #3d1319;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: all 600ms ease-in-out;
+}
+.block__title-2 h4:hover:before {
+  visibility: visible;
+  transform: scaleX(1);
 }
 
-.block_title {
-  display: inline-block;
+.block__title-3 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+.block__title-3 h4 {
+  padding-left: 50px;
+  padding-right: 50px;
+  font-size: 2em;
+  color: #3d1319;
+  position: relative;
+}
+.block__title-3 h4 img {
+  max-height: 20px;
+}
+.block__title-3 h4:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  bottom: 0;
+  left: 0;
+  background-color: #3d1319;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: all 600ms ease-in-out;
+}
+.block__title-3 h4:hover:before {
+  visibility: visible;
+  transform: scaleX(1);
+}
+
+.section__header {
+  text-align: center;
+}
+.section__header h3 {
+  font-size: 2.5em;
+  font-family: "Devonshire", cursive;
+  color: #3d1319;
+}
+
+.block__meals {
+  padding-left: 60px;
+  padding-right: 60px;
+}
+
+.block__meals-line {
+  display: flex;
   justify-content: space-between;
-  width: 85%;
+  padding-right: 50px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.section__footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 50px;
+}
+.section__footer h3 {
+  padding-left: 20px;
+  font-family: "Devonshire", cursive;
+  font-size: 2em;
+  font-weight: lighter;
+  color: #3d1319;
+}
+.section__footer img {
+  max-height: 60px;
+}
+
+header a {
+  text-decoration: none;
+}
+header a:visited {
+  color: #fcca53;
+}
+
+.menu-4-4 {
+  width: 1200px;
+  margin: auto;
+  display: flex;
+  background-color: #fdfffd;
+  box-shadow: 0px 0px 4px 5px #f1f1f1;
+  margin-top: 50px;
+  margin-bottom: 150px;
+  font-family: "Caveat-Regular", serif;
+  font-size: 1.5em;
+  font-weight: lighter;
+}
+
+.block__title-4-1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+.block__title-4-1 h4 {
+  padding-left: 80px;
+  padding-right: 80px;
+  font-size: 2em;
+  font-weight: lighter;
+  position: relative;
+}
+.block__title-4-1 h4 img {
+  max-height: 20px;
+}
+.block__title-4-1 h4:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  bottom: 0;
+  left: 0;
+  background-color: #bfff7c;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: all 600ms ease-in-out;
+}
+.block__title-4-1 h4:hover:before {
+  visibility: visible;
+  transform: scaleX(1);
+}
+
+.block__title-4-2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+.block__title-4-2 h4 {
+  padding-left: 15px;
+  padding-right: 15px;
+  font-size: 2em;
+  font-weight: lighter;
+  position: relative;
+}
+.block__title-4-2 h4 img {
+  max-height: 20px;
+}
+.block__title-4-2 h4:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  bottom: 0;
+  left: 0;
+  background-color: #bfff7c;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: all 600ms ease-in-out;
+}
+.block__title-4-2 h4:hover:before {
+  visibility: visible;
+  transform: scaleX(1);
+}
+
+.block__title-4-3 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+.block__title-4-3 h4 {
+  padding-left: 10px;
+  padding-right: 10px;
+  font-size: 2em;
+  font-weight: lighter;
+  position: relative;
+}
+.block__title-4-3 h4 img {
+  max-height: 20px;
+}
+.block__title-4-3 h4:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  bottom: 0;
+  left: 0;
+  background-color: #bfff7c;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: all 600ms ease-in-out;
+}
+.block__title-4-3 h4:hover:before {
+  visibility: visible;
+  transform: scaleX(1);
+}
+
+.section__header-4 {
+  text-align: center;
+  padding-bottom: 50px;
+}
+.section__header-4 h3 {
+  font-size: 3em;
+  font-family: "KaushanScript", cursive;
+  font-family: "KaushanScript", cursive;
+  background: -webkit-gradient(linear, left top, right bottom, from(#42973c), to(#bfff7c));
+  background: gradient(linear, left top, right bottom, from(#42973c), to(#bfff7c));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+}
+
+.block__meals-4 {
+  padding-left: 60px;
+  padding-right: 60px;
+}
+
+.block__meals-line-4 {
+  display: flex;
+  justify-content: space-between;
+  padding-right: 50px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.section__footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 50px;
+}
+.section__footer h3 {
+  padding-left: 20px;
+  font-family: "Devonshire", cursive;
+  font-size: 2em;
+  font-weight: lighter;
+  color: #3d1319;
+}
+.section__footer img {
+  max-height: 60px;
+}
+
+header a {
+  text-decoration: none;
+}
+header a:visited {
+  color: #fcca53;
+}
+
+.menu-2-2 {
+  width: 1200px;
+  margin: auto;
+  display: flex;
+  background-color: #fff5fe;
+  box-shadow: 0px 0px 4px 5px #f1f1f1;
+  margin-top: 50px;
+  margin-bottom: 150px;
+  font-family: "Times New Roman", Times, serif;
+  font-size: 1.5em;
+  font-weight: lighter;
+}
+
+.block__meals-line {
+  display: flex;
+  justify-content: space-between;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 5px;
+  padding-bottom: 10px;
+}
+
+.block__title-2-1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+.block__title-2-1 h4 {
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: 1em;
+  font-weight: lighter;
+  letter-spacing: 1px;
+  color: #d8852e;
+  position: relative;
+}
+.block__title-2-1 h4 img {
+  max-height: 20px;
+}
+.block__title-2-1 h4:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  bottom: 0;
+  left: 0;
+  background-color: #d8852e;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: all 600ms ease-in-out;
+}
+.block__title-2-1 h4:hover:before {
+  visibility: visible;
+  transform: scaleX(1);
+}
+
+.section__header-2 {
+  text-align: center;
+  padding-bottom: 100px;
+}
+.section__header-2 h3 {
+  font-size: 2.5em;
+  font-family: "YesevaOne", serif;
+  font-weight: lighter;
+  background: -webkit-gradient(linear, left top, right bottom, from(#d8852e), to(#905bfd));
+  background: gradient(linear, left top, right bottom, from(#d8852e), to(#905bfd));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+}
+
+.block__meals-1 {
+  color: #d8852e;
+  font-weight: lighter;
+  letter-spacing: 1px;
+  font-size: 0.8em;
+  padding-left: 60px;
+  padding-right: 60px;
+  padding-bottom: 50px;
+}
+
+.block__title-2-2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+.block__title-2-2 h4 {
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: 1em;
+  font-weight: lighter;
+  letter-spacing: 1px;
+  color: #a56799;
+  position: relative;
+}
+.block__title-2-2 h4 img {
+  max-height: 20px;
+}
+.block__title-2-2 h4:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  bottom: 0;
+  left: 0;
+  background-color: #a56799;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: all 600ms ease-in-out;
+}
+.block__title-2-2 h4:hover:before {
+  visibility: visible;
+  transform: scaleX(1);
+}
+
+.block__meals-2-2 {
+  color: #a56799;
+  font-weight: lighter;
+  letter-spacing: 1px;
+  font-size: 0.8em;
+  padding-left: 60px;
+  padding-right: 60px;
+  padding-bottom: 50px;
+}
+
+.block__title-2-3 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+.block__title-2-3 h4 {
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: 1em;
+  font-weight: lighter;
+  letter-spacing: 1px;
+  padding-left: 8px;
+  color: #905bfd;
+  position: relative;
+}
+.block__title-2-3 h4 img {
+  max-height: 20px;
+}
+.block__title-2-3 h4:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  bottom: 0;
+  left: 0;
+  background-color: #905bfd;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: all 600ms ease-in-out;
+}
+.block__title-2-3 h4:hover:before {
+  visibility: visible;
+  transform: scaleX(1);
+}
+
+.block__meals-2-3 {
+  color: #905bfd;
+  font-weight: lighter;
+  letter-spacing: 1px;
+  font-size: 0.8em;
+  padding-left: 60px;
+  padding-right: 60px;
+}
+
+header a {
+  text-decoration: none;
+}
+header a:visited {
+  color: #fcca53;
+}
+
+.menu-3 {
+  width: 1200px;
+  margin: auto;
+  display: flex;
+  background-color: #f9f9f9;
+  box-shadow: 0px 0px 4px 5px #f1f1f1;
+  margin-top: 50px;
+  margin-bottom: 150px;
+  font-family: "Caveat-Regular", serif;
+  font-size: 1.5em;
+  font-weight: lighter;
+}
+
+.block__title-3-1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+.block__title-3-1 h4 {
+  padding-left: 50px;
+  padding-right: 50px;
+  font-size: 1.5em;
+  font-weight: lighter;
+  position: relative;
+}
+.block__title-3-1 h4 img {
+  max-height: 20px;
+}
+.block__title-3-1 h4:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  bottom: 0;
+  left: 0;
+  background-color: #0229dd;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: all 600ms ease-in-out;
+}
+.block__title-3-1 h4:hover:before {
+  visibility: visible;
+  transform: scaleX(1);
+}
+
+.block__title-3-2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+.block__title-3-2 h4 {
+  padding-left: 50px;
+  padding-right: 50px;
+  font-size: 1.5em;
+  font-weight: lighter;
+  position: relative;
+}
+.block__title-3-2 h4 img {
+  max-height: 20px;
+}
+.block__title-3-2 h4:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  bottom: 0;
+  left: 0;
+  background-color: #0887fb;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: all 600ms ease-in-out;
+}
+.block__title-3-2 h4:hover:before {
+  visibility: visible;
+  transform: scaleX(1);
+}
+
+.block__title-3-3 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+.block__title-3-3 h4 {
+  padding-left: 50px;
+  padding-right: 50px;
+  font-size: 1.5em;
+  font-weight: lighter;
+  position: relative;
+}
+.block__title-3-3 h4 img {
+  max-height: 20px;
+}
+.block__title-3-3 h4:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  bottom: 0;
+  left: 0;
+  background-color: #229df9;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: all 600ms ease-in-out;
+}
+.block__title-3-3 h4:hover:before {
+  visibility: visible;
+  transform: scaleX(1);
+}
+
+.section__header-3 {
+  text-align: center;
+  padding-bottom: 100px;
+}
+.section__header-3 h3 {
+  font-size: 3em;
+  font-family: "Dancing Script", cursive;
+  font-weight: lighter;
+  background: -webkit-gradient(linear, left top, right bottom, from(#0229dd), to(#229df9));
+  background: gradient(linear, left top, right bottom, from(#0229dd), to(#229df9));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+}
+
+.block__meals {
+  padding-left: 60px;
+  padding-right: 60px;
+}
+
+.block__meals-line {
+  display: flex;
+  justify-content: space-between;
+  padding-right: 50px;
+  padding-top: 5px;
+  padding-bottom: 10px;
+}
+
+.section__footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 50px;
+}
+.section__footer h3 {
+  padding-left: 20px;
+  font-family: "Devonshire", cursive;
+  font-size: 2em;
+  font-weight: lighter;
+  color: #3d1319;
+}
+.section__footer img {
+  max-height: 60px;
+}
+
+header a {
+  text-decoration: none;
+}
+header a:visited {
+  color: #fcca53;
 }
 
 .mentions_legales {
@@ -320,6 +954,9 @@ body {
 }
 
 main {
+  max-width: 1200px;
+  min-height: 1400px;
+  margin: auto;
   margin-top: 50px;
   margin-bottom: 150px;
   display: flex;
@@ -329,7 +966,8 @@ main {
 
 .block {
   display: flex;
-  justify-content: space-evenly;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 .block a {
   text-decoration: none;
@@ -347,18 +985,19 @@ main {
 .link h2 {
   padding-top: 200px;
   color: #3d1319;
-  font-size: 2em;
+  font-size: 2.2em;
 }
 .link p {
   padding-top: 40px;
   padding-bottom: 200px;
-  font-size: 3.5em;
+  font-size: 3em;
 }
 
 .accueil-menu-1 {
-  width: 20%;
+  width: 400px;
   margin-left: 40px;
   margin-right: 20px;
+  margin-bottom: 30px;
   background-color: #fcdfdb;
   box-shadow: 0px 0px 4px 5px #f1f1f1;
 }
@@ -374,22 +1013,19 @@ main {
   text-transform: uppercase;
   font-weight: bold;
 }
-.accueil-menu-1 .icone {
-  background: -webkit-linear-gradient(right, #f78f6a, #f04a5e);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  padding-top: 160px;
-  font-size: 3em;
+.accueil-menu-1 img {
+  padding-top: 180px;
 }
-.accueil-menu-1:hover {
+.accueil-menu-1 .link:hover {
   transform: scale(1.1);
   opacity: 0.5;
 }
 
 .accueil-menu-2 {
-  width: 20%;
+  width: 400px;
   margin-left: 20px;
   margin-right: 20px;
+  margin-bottom: 30px;
   background-color: #fff5fe;
   box-shadow: 0px 0px 4px 5px #f1f1f1;
 }
@@ -400,20 +1036,21 @@ main {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
+  margin-top: 30px;
 }
 .accueil-menu-2 p {
   color: #d8852e;
   padding-top: 45px;
   font-weight: bold;
 }
-.accueil-menu-2:hover {
+.accueil-menu-2 .link:hover {
   transform: scale(1.1);
   opacity: 0.5;
 }
 
 .accueil-menu-3 {
-  width: 20%;
-  margin-left: 20px;
+  width: 400px;
+  margin-left: 60px;
   margin-right: 20px;
   background-color: #f9f9f9;
   box-shadow: 0px 0px 4px 5px #f1f1f1;
@@ -429,14 +1066,15 @@ main {
 .accueil-menu-3 p {
   font-family: "Caveat-Regular", serif;
   color: #229df9;
+  font-size: 3.5em;
 }
-.accueil-menu-3:hover {
+.accueil-menu-3 .link:hover {
   transform: scale(1.1);
   opacity: 0.5;
 }
 
 .accueil-menu-4 {
-  width: 20%;
+  width: 400px;
   margin-left: 20px;
   margin-right: 40px;
   background-color: #fdfffd;
@@ -453,8 +1091,9 @@ main {
 .accueil-menu-4 p {
   font-family: "Caveat-Regular", serif;
   color: #72bf56;
+  font-size: 3.5em;
 }
-.accueil-menu-4:hover {
+.accueil-menu-4 .link:hover {
   transform: scale(1.1);
   opacity: 0.5;
 }
