--- a/sass/pages/la_note_enchantee.scss
+++ b/sass/pages/la_note_enchantee.scss
@@ -1,48 +1,163 @@
+header a {
+    text-decoration: none;
+        &:visited {
+     color: $color-secondary;
+    }
+}
+
 .menu-1 {
     width: 1200px;
     margin: auto;
-    height: auto;
     display: flex;
     background-color: $color-menu1;
     box-shadow: 0px 0px 4px 5px #f1f1f1;
     margin-top: 50px;
     margin-bottom: 150px;
-    & .icone {
-        font-size: 3em;
-        padding-top: 80px;
-        padding-bottom: 30px;
-    }
-    & h3 {
-        text-align: center;
-        font-family: $font-note;
-        font-size: 3em;
-        padding-bottom: 50px;
-    }
-
-h3:after {
-        text-decoration: underline;
-        content: '';
-        position: absolute;
-        left: 0;
-        bottom: 0;
-        width: 0;
-        height: 2px;
-        background: $color-menu1-1;
-        transition: width 500ms ease;
-      }
-       
-    h3:hover:after {
-        width: 100%;
-      }
+    font-family: $font-secondary;
+    font-size: 1.5em;
+    font-weight: lighter;
 }
 
-.section__menu--variation1 {
+.block__title-1 {
     display: flex;
-    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    & h4 {
+        padding-left: 120px;
+        padding-right: 120px;
+        font-size: 2em;
+        color: $color-menu1-1;
+        position: relative;
+    & img {
+        max-height: 20px;
+    }
 }
 
-.block_title {
-    display: inline-block;
+h4:before {
+        content:"";
+        position:absolute;
+        width:100%;
+        height:3px;
+        bottom:0;
+        left:0;
+        background-color:$color-menu1-1;
+        transform:scaleX(0);
+        transform-origin: left;
+        transition:all 600ms ease-in-out;
+    }
+    & h4:hover:before {
+        visibility:visible;
+        transform:scaleX(1)
+    }
+}
+
+.block__title-2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    & h4 {
+        padding-left: 80px;
+        padding-right: 80px;
+        font-size: 2em;
+        color: $color-menu1-1;
+        position: relative;
+    & img {
+        max-height: 20px;
+    }
+}
+
+h4:before {
+        content:"";
+        position:absolute;
+        width:100%;
+        height:3px;
+        bottom:0;
+        left:0;
+        background-color:$color-menu1-1;
+        transform:scaleX(0);
+        transform-origin: left;
+        transition:all 600ms ease-in-out;
+    }
+    & h4:hover:before {
+        visibility:visible;
+        transform:scaleX(1)
+    }
+}
+
+.block__title-3 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    & h4 {
+        padding-left: 50px;
+        padding-right: 50px;
+        font-size: 2em;
+        color: $color-menu1-1;
+        position: relative;
+    & img {
+        max-height: 20px;
+    }
+}
+
+h4:before {
+        content:"";
+        position:absolute;
+        width:100%;
+        height:3px;
+        bottom:0;
+        left:0;
+        background-color:$color-menu1-1;
+        transform:scaleX(0);
+        transform-origin: left;
+        transition:all 600ms ease-in-out;
+    }
+    & h4:hover:before {
+        visibility:visible;
+        transform:scaleX(1)
+    }
+}
+
+.section__header {
+    text-align: center;
+    & h3 {
+    font-size: 2.5em;
+    font-family: $font-note;
+    color: $color-menu1-1;
+    }
+}
+
+.block__meals {
+    padding-left: 60px;
+    padding-right: 60px;
+}
+
+.block__meals-line {
+    display: flex;
     justify-content: space-between;
-    width: 85%;
+    padding-right: 50px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.section__footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 50px;
+    & h3 {
+        padding-left: 20px;
+        font-family: $font-note;
+        font-size: 2em;
+        font-weight: lighter;
+        color: $color-menu1-1;
+    }
+    & img {
+        max-height: 60px;
+    }
 }
