--- a/sass/pages/mentions_legales.scss
+++ b/sass/pages/mentions_legales.scss
@@ -1,3 +1,10 @@
+header a {
+  text-decoration: none;
+      &:visited {
+   color: $color-secondary;
+  }
+}
+
 .mentions_legales {
     padding: 50px 150px;
     margin-bottom: 150px;
