Ajout de padding dans link h2

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -49,6 +49,8 @@ main {
         padding-top: 200px;
         color: $color-menu1-1;
         font-size: 2.2em;
+        padding-left: 10px;
+        padding-right: 10px;
     }
     & p {
         padding-top: 40px;
