--- a/sass/pages/mentions_legales.scss
+++ b/sass/pages/mentions_legales.scss
@@ -6,25 +6,19 @@ header a {
 }
 
 .mentions_legales {
-    padding: 50px 150px;
+    padding-left: 50px;
+    padding-right: 50px;
     margin-bottom: 150px;
     display: flex;
     justify-content: center;
     font-family: 'Montserrat400';
-    @media screen and (max-width: 991px) {
-        align-items: center;
-        padding: 50px 100px;
-    }
-    @media screen and (max-width: 699px) {
-        padding: 50px;
-    }
   & h2 {
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
     text-transform: uppercase;
-    padding-bottom: 20px;
+    padding-bottom: 100px;
     font-weight: bold;
   }
   & h3 {
@@ -33,8 +27,11 @@ header a {
     align-items: center;
     text-align: center;
     text-transform: uppercase;
-    padding-bottom: 20px;
+    padding-bottom: 50px;
     padding-top: 30px;
     font-weight: bold;
+  }
+  & p {
+    padding-bottom: 20px;
   }
 }
