--- a/css/style.css
+++ b/css/style.css
@@ -203,22 +203,19 @@ footer {
   position: fixed;
   bottom: 0;
 }
-@media screen and (max-width: 991px) {
-  footer {
-    height: 80px;
-  }
-}
-@media screen and (max-width: 699px) {
-  footer {
-    height: 50px;
-  }
-}
 footer a {
   color: #fcca53;
   text-decoration: none;
   padding-left: 150px;
   padding-right: 150px;
   font-size: 2.5em;
+}
+@media screen and (max-width: 768px) {
+  footer a {
+    font-size: 1em;
+    text-align: center;
+    padding: 20px;
+  }
 }
 footer a:hover {
   -webkit-animation: vibrate-3 0.8s steps(2, end) infinite both;
