--- a/sass/layouts/footer.scss
+++ b/sass/layouts/footer.scss
@@ -10,19 +10,17 @@ footer {
     position: fixed;
     position: fixed;
     bottom: 0;
-    @media screen and (max-width: 991px) {
-      height: 80px;
-    }
-    @media screen and (max-width: 699px) {
-      height: 50px;
-    }
-
     & a {
         color: $color-secondary;
         text-decoration: none;
         padding-left: 150px;
         padding-right: 150px;
         font-size: 2.5em;
+        @media screen and (max-width: 768px) {
+          font-size: 1em;
+          text-align: center;
+          padding: 20px;
+        }
     }
     a:hover {
       -webkit-animation: vibrate-3 0.8s steps(2, end) infinite both;
