--- a/css/style.css
+++ b/css/style.css
@@ -189,6 +189,11 @@ header {
   font-size: 2.5em;
   font-weight: bold;
 }
+@media screen and (max-width: 768px) {
+  header {
+    font-size: 1.5em;
+  }
+}
 
 footer {
   width: 100%;
