--- a/sass/layouts/header.scss
+++ b/sass/layouts/header.scss
@@ -9,4 +9,7 @@ header {
     font-family: $font-maintitle;
     font-size: 2.5em;
     font-weight: bold;
+    @media screen and (max-width: 768px) {
+        font-size: 1.5em;
+    }
 }
