--- a/css/style.css
+++ b/css/style.css
@@ -214,6 +214,14 @@ footer a {
   padding-left: 150px;
   padding-right: 150px;
   font-size: 2.5em;
+  text-align: center;
+}
+@media screen and (max-width: 991px) {
+  footer a {
+    font-size: 1.5em;
+    text-align: center;
+    padding: 30px;
+  }
 }
 @media screen and (max-width: 768px) {
   footer a {
@@ -916,6 +924,17 @@ header a:visited {
   justify-content: center;
   font-family: "Montserrat400";
 }
+@media screen and (max-width: 991px) {
+  .mentions_legales {
+    align-items: center;
+    padding: 50px 100px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .mentions_legales {
+    padding: 50px;
+  }
+}
 .mentions_legales h2 {
   display: flex;
   justify-content: center;
@@ -998,6 +1017,12 @@ main {
   background-color: #fcdfdb;
   box-shadow: 0px 0px 4px 5px #f1f1f1;
 }
+@media screen and (max-width: 768px) {
+  .accueil-menu-1 {
+    max-width: 300px;
+    font-size: 0.8em;
+  }
+}
 .accueil-menu-1 h2 {
   font-size: 3em;
   padding-top: 5px;
@@ -1026,6 +1051,12 @@ main {
   background-color: #fff5fe;
   box-shadow: 0px 0px 4px 5px #f1f1f1;
 }
+@media screen and (max-width: 768px) {
+  .accueil-menu-2 {
+    max-width: 300px;
+    font-size: 0.8em;
+  }
+}
 .accueil-menu-2 h2 {
   font-family: "YesevaOne", serif;
   background: -webkit-gradient(linear, left top, right bottom, from(#d8852e), to(#905bfd));
@@ -1052,6 +1083,12 @@ main {
   background-color: #f9f9f9;
   box-shadow: 0px 0px 4px 5px #f1f1f1;
 }
+@media screen and (max-width: 768px) {
+  .accueil-menu-3 {
+    max-width: 300px;
+    font-size: 0.8em;
+  }
+}
 .accueil-menu-3 h2 {
   font-family: "Dancing Script", cursive;
   background: -webkit-gradient(linear, left top, right bottom, from(#0229dd), to(#0887fb));
@@ -1076,6 +1113,12 @@ main {
   margin-right: 40px;
   background-color: #fdfffd;
   box-shadow: 0px 0px 4px 5px #f1f1f1;
+}
+@media screen and (max-width: 768px) {
+  .accueil-menu-4 {
+    max-width: 300px;
+    font-size: 0.8em;
+  }
 }
 .accueil-menu-4 h2 {
   font-family: "KaushanScript", cursive;
@@ -1108,6 +1151,12 @@ button {
   color: #fcca53;
   font-family: "Montserrat400";
   font-size: 2.5em;
+}
+@media screen and (max-width: 768px) {
+  button {
+    max-width: 300px;
+    font-size: 1.5em;
+  }
 }
 
 .prochainement {
