--- a/sass/layouts/footer.scss
+++ b/sass/layouts/footer.scss
@@ -16,6 +16,12 @@ footer {
         padding-left: 150px;
         padding-right: 150px;
         font-size: 2.5em;
+        text-align: center;
+        @media screen and (max-width: 991px) {
+          font-size: 1.5em;
+          text-align: center;
+          padding: 30px;
+        } 
         @media screen and (max-width: 768px) {
           font-size: 1em;
           text-align: center;
