Hamonisation des marges de la page d'accueil sur la version mobile

--- a/css/prefixed/style.css
+++ b/css/prefixed/style.css
@@ -22,7 +22,7 @@
 }
 @font-face {
   font-family: "Yeseva One";
-  src: url("../fonts/YesevaOne-Regular.ttf") format("truetype");
+  src: url(".../fonts/YesevaOne-Regular.ttf") format("truetype");
 }
 @font-face {
   font-family: "Cantata One";
