--- a/sass/layouts/header.scss
+++ b/sass/layouts/header.scss
@@ -11,5 +11,6 @@ header {
     font-weight: bold;
     @media screen and (max-width: 768px) {
         font-size: 1.5em;
+        margin-bottom: 50px;
     }
 }
