--- a/sass/pages/la_note_enchantee.scss
+++ b/sass/pages/la_note_enchantee.scss
@@ -32,8 +32,8 @@ header a {
     align-items: center;
     padding-top: 50px;
     padding-bottom: 50px;
-    @media screen and (max-width: 1199px) {
-        flex-direction: column;
+    @media screen and (max-width: 768px) {
+        font-size: 0.6em;
     }
     & h4 {
         padding-left: 120px;
@@ -41,8 +41,18 @@ header a {
         font-size: 2em;
         color: $color-menu1-1;
         position: relative;
+        @media screen and (max-width: 1199px) {
+            padding-left: 10px;
+            padding-right: 10px;
+        }
     & img {
-        max-height: 20px;
+        max-height: 80px
+    }
+}
+
+img {
+    @media screen and (max-width: 991px) {
+        max-width: 40px;
     }
 }
 
@@ -70,8 +80,9 @@ h4:before {
     align-items: center;
     padding-top: 50px;
     padding-bottom: 50px;
-    @media screen and (max-width: 1199px) {
-        flex-direction: column;
+    @media screen and (max-width: 768px) {
+        font-size: 0.6em;
+        text-align: center;
     }
     & h4 {
         padding-left: 80px;
@@ -79,8 +90,18 @@ h4:before {
         font-size: 2em;
         color: $color-menu1-1;
         position: relative;
+        @media screen and (max-width: 1199px) {
+            padding-left: 10px;
+            padding-right: 10px;
+        }
     & img {
         max-height: 20px;
+    }
+}
+
+img {
+    @media screen and (max-width: 991px) {
+        max-width: 40px;
     }
 }
 
@@ -108,8 +129,9 @@ h4:before {
     align-items: center;
     padding-top: 50px;
     padding-bottom: 50px;
-    @media screen and (max-width: 1199px) {
-        flex-direction: column;
+    @media screen and (max-width: 768px) {
+        font-size: 0.6em;
+        text-align: center;
     }
     & h4 {
         padding-left: 50px;
@@ -117,8 +139,18 @@ h4:before {
         font-size: 2em;
         color: $color-menu1-1;
         position: relative;
+        @media screen and (max-width: 1199px) {
+            padding-left: 10px;
+            padding-right: 10px;
+        }
     & img {
         max-height: 20px;
+    }
+}
+
+img {
+    @media screen and (max-width: 991px) {
+        max-width: 40px;
     }
 }
 
@@ -143,30 +175,37 @@ h4:before {
 .section__header {
     text-align: center;
     @media screen and (max-width: 768px) {
-        padding-bottom: 30px;
+        padding-bottom: 5px;
     }
     & h3 {
-    font-size: 2.5em;
+    font-size: 1.8em;
     font-family: $font-note;
     color: $color-menu1-1;
+
     }
 }
 
 .block__meals {
     padding-left: 60px;
     padding-right: 60px;
+    @media screen and (max-width: 768px) {
+        padding: 10px;
+    }
 }
 
 .block__meals-line {
     display: flex;
     justify-content: space-between;
     padding-right: 50px;
+    padding-left: 50px;
     padding-top: 5px;
     padding-bottom: 5px;
-    @media screen and (max-width: 1199px) {
-        flex-wrap: wrap;
-        padding-top: 10px;
-        padding-bottom: 10px;
+    @media screen and (max-width: 768px) {
+        padding: 10px;
+        font-size: 0.8em;
+    }
+    & .price {
+        padding-left: 20px;
     }
 }
 
@@ -175,6 +214,9 @@ h4:before {
     justify-content: center;
     align-items: center;
     padding-top: 50px;
+    @media screen and (max-width: 768px){
+        font-size: 0.6em;
+    }
     & h3 {
         padding-left: 20px;
         font-family: $font-note;
