--- a/sass/pages/le_chic_a_la_francaise.scss
+++ b/sass/pages/le_chic_a_la_francaise.scss
@@ -21,8 +21,6 @@ header a {
         width: 90%;
         display: flex;
         flex-direction: column;
-        padding-top: 30px;
-        padding-bottom: 30px;
        }
 }
 
@@ -32,8 +30,8 @@ header a {
     align-items: center;
     padding-top: 50px;
     padding-bottom: 50px;
-    @media screen and (max-width: 1199px) {
-        flex-direction: column;
+    @media screen and (max-width: 768px) {
+        font-size: 0.6em;
     }
     & h4 {
         font-family: Georgia, 'Times New Roman', Times, serif;
@@ -42,8 +40,22 @@ header a {
         letter-spacing: 1px;
         color: $color-menu2-1;
         position: relative;
+        @media screen and (max-width: 1199px) {
+            padding-left: 10px;
+            padding-right: 10px;
+            text-align: center;
+        }
     & img {
-        max-height: 20px;
+        max-height: 80px;
+    }
+}
+
+img {
+    @media screen and (max-width: 991px) {
+        max-width: 200px;
+    }
+    @media screen and (max-width: 768px) {
+        max-width: 80px;
     }
 }
 
@@ -67,9 +79,11 @@ h4:before {
 
 .section__header-2 {
     text-align: center;
-    padding-bottom: 100px;
+    padding-top: 20px;
+    padding-bottom: 80px;
     @media screen and (max-width: 768px) {
-        padding-bottom: 30px;
+        padding-top: 0px;
+        padding-bottom: 20px;
     }
     & h3 {
     font-size: 2.5em;
@@ -80,17 +94,20 @@ h4:before {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
+    @media screen and (max-width: 768px) {
+        font-size: 1.5em;
+    }
     }
 }
 
-.block__meals-1 {
+.block__meals-2 {
     color: $color-menu2-1;
     font-weight: lighter;
-    letter-spacing: 1px;
     font-size: 0.8em;
-    padding-left: 60px;
-    padding-right: 60px;
-    padding-bottom: 50px;
+    padding: 50px;
+    @media screen and (max-width: 768px) {
+        padding: 10px;
+    }
 }
 
 .block__title-2-2 {
@@ -99,8 +116,8 @@ h4:before {
     align-items: center;
     padding-top: 50px;
     padding-bottom: 50px;
-    @media screen and (max-width: 1199px) {
-        flex-direction: column;
+    @media screen and (max-width: 768px) {
+        font-size: 0.6em;
     }
     & h4 {
         font-family: Georgia, 'Times New Roman', Times, serif;
@@ -109,8 +126,22 @@ h4:before {
         letter-spacing: 1px;
         color: $color-menu2-3;
         position: relative;
+        @media screen and (max-width: 1199px) {
+            padding-left: 10px;
+            padding-right: 10px;
+            text-align: center;
+        }
     & img {
-        max-height: 20px;
+        max-height: 80px;
+    }
+}
+
+img {
+    @media screen and (max-width: 991px) {
+        max-width: 200px;
+    }
+    @media screen and (max-width: 768px) {
+        max-width: 80px;
     }
 }
 
@@ -137,9 +168,10 @@ h4:before {
     font-weight: lighter;
     letter-spacing: 1px;
     font-size: 0.8em;
-    padding-left: 60px;
-    padding-right: 60px;
-    padding-bottom: 50px;
+    padding: 50px;
+    @media screen and (max-width: 768px) {
+        padding: 10px;
+    }
 }
 
 .block__title-2-3 {
@@ -148,8 +180,8 @@ h4:before {
     align-items: center;
     padding-top: 50px;
     padding-bottom: 50px;
-    @media screen and (max-width: 1199px) {
-        flex-direction: column;
+    @media screen and (max-width: 768px) {
+        font-size: 0.6em;
     }
     & h4 {
         font-family: Georgia, 'Times New Roman', Times, serif;
@@ -159,8 +191,22 @@ h4:before {
         padding-left: 8px;
         color: $color-menu2-2;
         position: relative;
+        @media screen and (max-width: 1199px) {
+            padding-left: 10px;
+            padding-right: 10px;
+            text-align: center;
+        }
     & img {
-        max-height: 20px;
+        max-height: 80px;
+    }
+}
+
+img {
+    @media screen and (max-width: 991px) {
+        max-width: 200px;
+    }
+    @media screen and (max-width: 768px) {
+        max-width: 80px;
     }
 }
 
@@ -187,20 +233,35 @@ h4:before {
     font-weight: lighter;
     letter-spacing: 1px;
     font-size: 0.8em;
-    padding-left: 60px;
-    padding-right: 60px;
+    padding: 50px;
+    @media screen and (max-width: 768px) {
+        padding: 10px;
+    }
 }
 
-.block__meals-line {
+.block__meals-line-2 {
     display: flex;
     justify-content: space-between;
     padding-left: 50px;
     padding-right: 50px;
     padding-top: 5px;
     padding-bottom: 10px;
-    @media screen and (max-width: 1199px) {
+    @media screen and (max-width: 768px) {
         flex-wrap: wrap;
         padding-top: 10px;
         padding-bottom: 10px;
+        font-size: 0.5em;
+    }
+}
+
+.block__meals-line-2 {
+    padding-left: 60px;
+    padding-right: 60px;
+    @media screen and (max-width: 768px) {
+        padding: 10px;
+        font-size: 0.8em;
+    }
+    & .price-2 {
+        padding-left: 20px;
     }
 }
