--- a/sass/pages/le_delice_des_papilles.scss
+++ b/sass/pages/le_delice_des_papilles.scss
@@ -32,7 +32,7 @@ header a {
     align-items: center;
     padding-top: 50px;
     padding-bottom: 50px;
-    @media screen and (max-width: 1199px) {
+    @media screen and (max-width: 768px) {
         flex-direction: column;
     }
     & h4 {
@@ -70,7 +70,7 @@ h4:before {
     align-items: center;
     padding-top: 50px;
     padding-bottom: 50px;
-    @media screen and (max-width: 1199px) {
+    @media screen and (max-width: 768px) {
         flex-direction: column;
     }
     & h4 {
@@ -108,7 +108,7 @@ h4:before {
     align-items: center;
     padding-top: 50px;
     padding-bottom: 50px;
-    @media screen and (max-width: 1199px) {
+    @media screen and (max-width: 768px) {
         flex-direction: column;
     }
     & h4 {
@@ -158,18 +158,18 @@ h4:before {
     }
 }
 
-.block__meals {
+.block__meals-3 {
     padding-left: 60px;
     padding-right: 60px;
 }
 
-.block__meals-line {
+.block__meals-line-3 {
     display: flex;
     justify-content: space-between;
     padding-right: 50px;
     padding-top: 5px;
     padding-bottom: 10px;
-    @media screen and (max-width: 1199px) {
+    @media screen and (max-width: 768px) {
         flex-wrap: wrap;
         padding-top: 10px;
         padding-bottom: 10px;
