Mise en pages des pages menus sur mobile

--- a/sass/pages/la_note_enchantee.scss
+++ b/sass/pages/la_note_enchantee.scss
@@ -203,6 +203,7 @@ h4:before {
     @media screen and (max-width: 768px) {
         padding: 10px;
         font-size: 0.8em;
+        align-items: center;
     }
     & .price {
         padding-left: 20px;
