--- a/css/style.css
+++ b/css/style.css
@@ -374,6 +374,7 @@ header a:visited {
   .block__meals-line {
     padding: 10px;
     font-size: 0.8em;
+    align-items: center;
   }
 }
 .block__meals-line .price {
@@ -442,12 +443,14 @@ header a:visited {
 @media screen and (max-width: 768px) {
   .block__title-4-1 {
     font-size: 0.6em;
+    padding-left: 10px;
+    padding-right: 10px;
   }
 }
 .block__title-4-1 h4 {
-  padding-left: 80px;
-  padding-right: 80px;
-  font-size: 2em;
+  padding-left: 50px;
+  padding-right: 50px;
+  font-size: 1.5em;
   font-weight: lighter;
   position: relative;
 }
@@ -455,10 +458,21 @@ header a:visited {
   .block__title-4-1 h4 {
     padding-left: 10px;
     padding-right: 10px;
+    text-align: center;
   }
 }
 .block__title-4-1 h4 img {
   max-height: 80px;
+}
+@media screen and (max-width: 991px) {
+  .block__title-4-1 img {
+    max-width: 200px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .block__title-4-1 img {
+    max-width: 80px;
+  }
 }
 @media screen and (max-width: 991px) {
   .block__title-4-1 img {
@@ -492,12 +506,14 @@ header a:visited {
 @media screen and (max-width: 768px) {
   .block__title-4-2 {
     font-size: 0.6em;
+    padding-left: 10px;
+    padding-right: 10px;
   }
 }
 .block__title-4-2 h4 {
-  padding-left: 15px;
-  padding-right: 15px;
-  font-size: 2em;
+  padding-left: 50px;
+  padding-right: 50px;
+  font-size: 1.5em;
   font-weight: lighter;
   position: relative;
 }
@@ -505,14 +521,20 @@ header a:visited {
   .block__title-4-2 h4 {
     padding-left: 10px;
     padding-right: 10px;
+    text-align: center;
   }
 }
 .block__title-4-2 h4 img {
-  max-height: 20px;
+  max-height: 80px;
 }
 @media screen and (max-width: 991px) {
   .block__title-4-2 img {
-    max-width: 40px;
+    max-width: 200px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .block__title-4-2 img {
+    max-width: 80px;
   }
 }
 .block__title-4-2 h4:before {
@@ -542,28 +564,35 @@ header a:visited {
 @media screen and (max-width: 768px) {
   .block__title-4-3 {
     font-size: 0.6em;
-    text-align: center;
+    padding-left: 10px;
+    padding-right: 10px;
   }
 }
 .block__title-4-3 h4 {
-  padding-left: 10px;
-  padding-right: 10px;
-  font-size: 2em;
+  padding-left: 50px;
+  padding-right: 50px;
+  font-size: 1.5em;
   font-weight: lighter;
   position: relative;
 }
 @media screen and (max-width: 1199px) {
   .block__title-4-3 h4 {
-    padding-left: 5px;
-    padding-right: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    text-align: center;
   }
 }
 .block__title-4-3 h4 img {
-  max-height: 20px;
+  max-height: 80px;
 }
 @media screen and (max-width: 991px) {
   .block__title-4-3 img {
-    max-width: 40px;
+    max-width: 200px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .block__title-4-3 img {
+    max-width: 80px;
   }
 }
 .block__title-4-3 h4:before {
@@ -589,8 +618,7 @@ header a:visited {
 }
 @media screen and (max-width: 768px) {
   .section__header-4 {
-    padding-bottom: 5px;
-    font-size: 0.8em;
+    padding: 30px;
   }
 }
 .section__header-4 h3 {
@@ -602,6 +630,11 @@ header a:visited {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
+}
+@media screen and (max-width: 768px) {
+  .section__header-4 h3 {
+    font-size: 1.5em;
+  }
 }
 
 .block__meals-4 {
@@ -625,9 +658,12 @@ header a:visited {
   .block__meals-line-4 {
     padding: 10px;
     font-size: 0.8em;
+    min-width: 220px;
+    flex-wrap: unset;
+    align-items: center;
   }
 }
-.block__meals-line-4 .price {
+.block__meals-line-4 .price-4 {
   padding-left: 20px;
 }
 
@@ -724,7 +760,7 @@ header a:visited {
 @media screen and (max-width: 768px) {
   .section__header-2 {
     padding-top: 0px;
-    padding-bottom: 20px;
+    padding-bottom: 50px;
   }
 }
 .section__header-2 h3 {
@@ -899,28 +935,18 @@ header a:visited {
 .block__meals-line-2 {
   display: flex;
   justify-content: space-between;
-  padding-left: 50px;
-  padding-right: 50px;
-  padding-top: 5px;
-  padding-bottom: 10px;
-}
-@media screen and (max-width: 768px) {
-  .block__meals-line-2 {
-    flex-wrap: wrap;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    font-size: 0.5em;
-  }
-}
-
-.block__meals-line-2 {
   padding-left: 60px;
   padding-right: 60px;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 @media screen and (max-width: 768px) {
   .block__meals-line-2 {
     padding: 10px;
     font-size: 0.8em;
+    min-width: 220px;
+    flex-wrap: unset;
+    align-items: center;
   }
 }
 .block__meals-line-2 .price-2 {
@@ -966,7 +992,9 @@ header a:visited {
 }
 @media screen and (max-width: 768px) {
   .block__title-3-1 {
-    flex-direction: column;
+    font-size: 0.6em;
+    padding-left: 10px;
+    padding-right: 10px;
   }
 }
 .block__title-3-1 h4 {
@@ -976,8 +1004,25 @@ header a:visited {
   font-weight: lighter;
   position: relative;
 }
+@media screen and (max-width: 1199px) {
+  .block__title-3-1 h4 {
+    padding-left: 2px;
+    padding-right: 2px;
+    text-align: center;
+  }
+}
 .block__title-3-1 h4 img {
-  max-height: 20px;
+  max-height: 80px;
+}
+@media screen and (max-width: 991px) {
+  .block__title-3-1 img {
+    max-width: 200px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .block__title-3-1 img {
+    max-width: 80px;
+  }
 }
 .block__title-3-1 h4:before {
   content: "";
@@ -1005,7 +1050,9 @@ header a:visited {
 }
 @media screen and (max-width: 768px) {
   .block__title-3-2 {
-    flex-direction: column;
+    font-size: 0.6em;
+    padding-left: 10px;
+    padding-right: 10px;
   }
 }
 .block__title-3-2 h4 {
@@ -1015,8 +1062,25 @@ header a:visited {
   font-weight: lighter;
   position: relative;
 }
+@media screen and (max-width: 1199px) {
+  .block__title-3-2 h4 {
+    padding-left: 2px;
+    padding-right: 2px;
+    text-align: center;
+  }
+}
 .block__title-3-2 h4 img {
-  max-height: 20px;
+  max-height: 80px;
+}
+@media screen and (max-width: 991px) {
+  .block__title-3-2 img {
+    max-width: 200px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .block__title-3-2 img {
+    max-width: 80px;
+  }
 }
 .block__title-3-2 h4:before {
   content: "";
@@ -1044,7 +1108,9 @@ header a:visited {
 }
 @media screen and (max-width: 768px) {
   .block__title-3-3 {
-    flex-direction: column;
+    font-size: 0.6em;
+    padding-left: 10px;
+    padding-right: 10px;
   }
 }
 .block__title-3-3 h4 {
@@ -1054,8 +1120,25 @@ header a:visited {
   font-weight: lighter;
   position: relative;
 }
+@media screen and (max-width: 1199px) {
+  .block__title-3-3 h4 {
+    padding-left: 2px;
+    padding-right: 2px;
+    text-align: center;
+  }
+}
 .block__title-3-3 h4 img {
-  max-height: 20px;
+  max-height: 80px;
+}
+@media screen and (max-width: 991px) {
+  .block__title-3-3 img {
+    max-width: 200px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .block__title-3-3 img {
+    max-width: 80px;
+  }
 }
 .block__title-3-3 h4:before {
   content: "";
@@ -1080,7 +1163,7 @@ header a:visited {
 }
 @media screen and (max-width: 768px) {
   .section__header-3 {
-    padding-bottom: 30px;
+    padding: 30px;
   }
 }
 .section__header-3 h3 {
@@ -1093,10 +1176,20 @@ header a:visited {
   -webkit-text-fill-color: transparent;
   background-clip: text;
 }
+@media screen and (max-width: 768px) {
+  .section__header-3 h3 {
+    font-size: 1.5em;
+  }
+}
 
 .block__meals-3 {
   padding-left: 60px;
   padding-right: 60px;
+}
+@media screen and (max-width: 768px) {
+  .block__meals-3 {
+    padding: 10px;
+  }
 }
 
 .block__meals-line-3 {
@@ -1108,10 +1201,15 @@ header a:visited {
 }
 @media screen and (max-width: 768px) {
   .block__meals-line-3 {
-    flex-wrap: wrap;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding: 10px;
+    font-size: 0.8em;
+    min-width: 220px;
+    flex-wrap: unset;
+    align-items: center;
   }
+}
+.block__meals-line-3 .price-3 {
+  padding-left: 20px;
 }
 
 .section__footer {
