--- a/sass/pages/la_palette_du_gout.scss
+++ b/sass/pages/la_palette_du_gout.scss
@@ -34,19 +34,31 @@ header a {
     padding-bottom: 50px;
     @media screen and (max-width: 768px) {
         font-size: 0.6em;
+        padding-left: 10px;
+        padding-right: 10px;
     }
     & h4 {
-        padding-left: 80px;
-        padding-right: 80px;
-        font-size: 2em;
+        padding-left: 50px;
+        padding-right: 50px;
+        font-size: 1.5em;
         font-weight: lighter;
         position: relative;
         @media screen and (max-width: 1199px) {
             padding-left: 10px;
             padding-right: 10px;
+            text-align: center;
         }
     & img {
         max-height: 80px;
+    }
+}
+
+img {
+    @media screen and (max-width: 991px) {
+        max-width: 200px;
+    }
+    @media screen and (max-width: 768px) {
+        max-width: 80px;
     }
 }
 
@@ -82,25 +94,31 @@ h4:before {
     padding-bottom: 50px;
     @media screen and (max-width: 768px) {
         font-size: 0.6em;
+        padding-left: 10px;
+        padding-right: 10px;
     }
     & h4 {
-        padding-left: 15px;
-        padding-right: 15px;
-        font-size: 2em;
+        padding-left: 50px;
+        padding-right: 50px;
+        font-size: 1.5em;
         font-weight: lighter;
         position: relative;
         @media screen and (max-width: 1199px) {
             padding-left: 10px;
             padding-right: 10px;
+            text-align: center;
         }
     & img {
-        max-height: 20px;
+        max-height: 80px;
     }
 }
 
 img {
     @media screen and (max-width: 991px) {
-        max-width: 40px;
+        max-width: 200px;
+    }
+    @media screen and (max-width: 768px) {
+        max-width: 80px;
     }
 }
 
@@ -130,26 +148,31 @@ h4:before {
     padding-bottom: 50px;
     @media screen and (max-width: 768px) {
         font-size: 0.6em;
-        text-align: center;
-    }
-    & h4 {
         padding-left: 10px;
         padding-right: 10px;
-        font-size: 2em;
+    }
+    & h4 {
+        padding-left: 50px;
+        padding-right: 50px;
+        font-size: 1.5em;
         font-weight: lighter;
         position: relative;
         @media screen and (max-width: 1199px) {
-            padding-left: 5px;
-            padding-right: 5px;
+            padding-left: 10px;
+            padding-right: 10px;
+            text-align: center;
         }
     & img {
-        max-height: 20px;
+        max-height: 80px;
     }
 }
 
 img {
     @media screen and (max-width: 991px) {
-        max-width: 40px;
+        max-width: 200px;
+    }
+    @media screen and (max-width: 768px) {
+        max-width: 80px;
     }
 }
 
@@ -175,8 +198,7 @@ h4:before {
     text-align: center;
     padding-bottom: 50px;
     @media screen and (max-width: 768px) {
-        padding-bottom: 5px;
-        font-size: 0.8em;
+        padding: 30px;
     }
     & h3 {
     font-size: 3em;
@@ -187,6 +209,9 @@ h4:before {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
+        @media screen and (max-width: 768px) {
+            font-size: 1.5em;
+        }
     }
 }
 
@@ -207,8 +232,11 @@ h4:before {
     @media screen and (max-width: 768px) {
         padding: 10px;
         font-size: 0.8em;
+        min-width: 220px;
+        flex-wrap: unset;
+        align-items: center;
     }
-    & .price {
+    & .price-4 {
         padding-left: 20px;
     }
 }
