--- a/sass/pages/le_chic_a_la_francaise.scss
+++ b/sass/pages/le_chic_a_la_francaise.scss
@@ -59,6 +59,7 @@ img {
     }
 }
 
+
 h4:before {
         content:"";
         position:absolute;
@@ -83,7 +84,7 @@ h4:before {
     padding-bottom: 80px;
     @media screen and (max-width: 768px) {
         padding-top: 0px;
-        padding-bottom: 20px;
+        padding-bottom: 50px;
     }
     & h3 {
     font-size: 2.5em;
@@ -94,9 +95,9 @@ h4:before {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
-    @media screen and (max-width: 768px) {
-        font-size: 1.5em;
-    }
+        @media screen and (max-width: 768px) {
+            font-size: 1.5em;
+        }
     }
 }
 
@@ -242,24 +243,16 @@ h4:before {
 .block__meals-line-2 {
     display: flex;
     justify-content: space-between;
-    padding-left: 50px;
-    padding-right: 50px;
-    padding-top: 5px;
-    padding-bottom: 10px;
-    @media screen and (max-width: 768px) {
-        flex-wrap: wrap;
-        padding-top: 10px;
-        padding-bottom: 10px;
-        font-size: 0.5em;
-    }
-}
-
-.block__meals-line-2 {
     padding-left: 60px;
     padding-right: 60px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     @media screen and (max-width: 768px) {
         padding: 10px;
         font-size: 0.8em;
+        min-width: 220px;
+        flex-wrap: unset;
+        align-items: center;
     }
     & .price-2 {
         padding-left: 20px;
