--- a/sass/pages/le_delice_des_papilles.scss
+++ b/sass/pages/le_delice_des_papilles.scss
@@ -33,7 +33,9 @@ header a {
     padding-top: 50px;
     padding-bottom: 50px;
     @media screen and (max-width: 768px) {
-        flex-direction: column;
+        font-size: 0.6em;
+        padding-left: 10px;
+        padding-right: 10px;
     }
     & h4 {
         padding-left: 50px;
@@ -41,8 +43,22 @@ header a {
         font-size: 1.5em;
         font-weight: lighter;
         position: relative;
+        @media screen and (max-width: 1199px) {
+            padding-left: 2px;
+            padding-right: 2px;
+            text-align: center;
+        }
     & img {
-        max-height: 20px;
+        max-height: 80px;
+    }
+}
+
+img {
+    @media screen and (max-width: 991px) {
+        max-width: 200px;
+    }
+    @media screen and (max-width: 768px) {
+        max-width: 80px;
     }
 }
 
@@ -71,7 +87,9 @@ h4:before {
     padding-top: 50px;
     padding-bottom: 50px;
     @media screen and (max-width: 768px) {
-        flex-direction: column;
+        font-size: 0.6em;
+        padding-left: 10px;
+        padding-right: 10px;
     }
     & h4 {
         padding-left: 50px;
@@ -79,10 +97,25 @@ h4:before {
         font-size: 1.5em;
         font-weight: lighter;
         position: relative;
+        @media screen and (max-width: 1199px) {
+            padding-left: 2px;
+            padding-right: 2px;
+            text-align: center;
+        }
     & img {
-        max-height: 20px;
+        max-height: 80px;
     }
 }
+
+img {
+    @media screen and (max-width: 991px) {
+        max-width: 200px;
+    }
+    @media screen and (max-width: 768px) {
+        max-width: 80px;
+    }
+}
+
 
 h4:before {
         content:"";
@@ -109,7 +142,9 @@ h4:before {
     padding-top: 50px;
     padding-bottom: 50px;
     @media screen and (max-width: 768px) {
-        flex-direction: column;
+        font-size: 0.6em;
+        padding-left: 10px;
+        padding-right: 10px;
     }
     & h4 {
         padding-left: 50px;
@@ -117,8 +152,22 @@ h4:before {
         font-size: 1.5em;
         font-weight: lighter;
         position: relative;
+        @media screen and (max-width: 1199px) {
+            padding-left: 2px;
+            padding-right: 2px;
+            text-align: center;
+        }
     & img {
-        max-height: 20px;
+        max-height: 80px;
+    }
+}
+
+img {
+    @media screen and (max-width: 991px) {
+        max-width: 200px;
+    }
+    @media screen and (max-width: 768px) {
+        max-width: 80px;
     }
 }
 
@@ -144,7 +193,7 @@ h4:before {
     text-align: center;
     padding-bottom: 100px;
     @media screen and (max-width: 768px) {
-        padding-bottom: 30px;
+        padding: 30px;
     }
     & h3 {
     font-size: 3em;
@@ -155,12 +204,18 @@ h4:before {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
+        @media screen and (max-width: 768px) {
+            font-size: 1.5em;
+        }
     }
 }
 
 .block__meals-3 {
     padding-left: 60px;
     padding-right: 60px;
+    @media screen and (max-width: 768px) {
+        padding: 10px;
+    }
 }
 
 .block__meals-line-3 {
@@ -170,9 +225,14 @@ h4:before {
     padding-top: 5px;
     padding-bottom: 10px;
     @media screen and (max-width: 768px) {
-        flex-wrap: wrap;
-        padding-top: 10px;
-        padding-bottom: 10px;
+        padding: 10px;
+        font-size: 0.8em;
+        min-width: 220px;
+        flex-wrap: unset;
+        align-items: center;
+    }
+    & .price-3 {
+        padding-left: 20px;
     }
 }
 
